fix layout template + podcast page works statically

--- a/src/pages/podcasts.astro
+++ b/src/pages/podcasts.astro
@@ -1,21 +1,144 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
-
 ---
 
 <Layout title="Podcasts - Marxist Linktree">
-	<div class="header-section wf-section">
-		<div class="content-heading">
-			<div class="content-heading-title"><img src="images/microphone.png" loading="lazy" alt="" class="content-heading-icon">
-				<h1 class="content-heading-text">Podcasts</h1>
-			</div>
-			<div class="content-heading-disclaimer"><strong>Consuming content is not radical political activism.</strong> It is also not a substitute for organizing, demonstrating, unionizing, agitating &amp; educating. Don&#x27;t forget to touch grass.</div>
-		</div>
+	<main>
+		<img src="images/microphone.png" class="content-heading-icon" />
+		<h1 class="content-heading-text">Podcasts</h1>
+		<p class="content-heading-disclaimer">
+			<strong>Consuming content is not radical political activism.</strong>
+			It is also not a substitute for organizing, demonstrating, unionizing,
+			agitating &amp; educating. Don&#x27;t forget to touch grass.
+		</p>
+
 		<div class="content-form-block w-form">
-			<form id="email-form" name="email-form" data-name="Email Form" method="get" class="content-form" data-wf-page-id="64833c589ce3bebd0f3046a6" data-wf-element-id="0eb93d29-dd08-516b-1136-f18c1ba5be21">
-				<div class="content-search"><label for="name" class="search-label">Search podcast by name</label><input type="text" class="search-field w-input" maxlength="256" name="name" fs-cmsfilter-field="name" data-name="Name" placeholder="" id="name"></div>
-				<div fs-cmsfilter-element="filters" class="content-filters"><label data-w-id="6f9af2f6-e4bc-fe32-6e48-1231293ef14e" class="w-checkbox filter-checkbox"><input type="checkbox" id="checkbox" name="checkbox" data-name="Checkbox" class="w-checkbox-input checkbox"><span fs-cmsfilter-field="category" class="checkbox-label w-form-label" for="checkbox">Theory</span></label><label data-w-id="c3f2038a-b0b0-2c9b-f024-0f4d261fb0bf" class="w-checkbox filter-checkbox"><input type="checkbox" id="checkbox-3" name="checkbox-3" data-name="Checkbox 3" class="w-checkbox-input checkbox-2"><span fs-cmsfilter-field="category" class="checkbox-label w-form-label" for="checkbox-3">Former socialism</span></label><label class="w-checkbox filter-checkbox"><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" class="w-checkbox-input checkbox-3"><span fs-cmsfilter-field="category" class="checkbox-label w-form-label" for="checkbox-2">History</span></label><label class="w-checkbox filter-checkbox"><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" class="w-checkbox-input checkbox-4"><span fs-cmsfilter-field="category" class="checkbox-label w-form-label" for="checkbox-2">Society &amp; culture</span></label><label class="w-checkbox filter-checkbox"><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" class="w-checkbox-input checkbox-5"><span fs-cmsfilter-field="category" class="checkbox-label w-form-label" for="checkbox-2">Current events</span></label><label class="w-checkbox filter-checkbox"><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" class="w-checkbox-input checkbox-6"><span fs-cmsfilter-field="category" class="checkbox-label w-form-label" for="checkbox-2">Philosophy</span></label><label class="w-checkbox filter-checkbox"><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" class="w-checkbox-input checkbox-7"><span fs-cmsfilter-field="category" class="checkbox-label w-form-label" for="checkbox-2">Environmentalism</span></label><label class="w-checkbox filter-checkbox"><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" class="w-checkbox-input checkbox-8"><span fs-cmsfilter-field="category" class="checkbox-label w-form-label" for="checkbox-2">Economics</span></label></div>
+			<form
+				id="email-form"
+				name="email-form"
+				data-name="Email Form"
+				method="get"
+				class="content-form"
+				data-wf-page-id="64833c589ce3bebd0f3046a6"
+				data-wf-element-id="0eb93d29-dd08-516b-1136-f18c1ba5be21"
+			>
+				<div class="content-search">
+					<label for="name" class="search-label"
+						>Search podcast by name</label
+					><input
+						type="text"
+						class="search-field w-input"
+						maxlength="256"
+						name="name"
+						fs-cmsfilter-field="name"
+						data-name="Name"
+						placeholder=""
+						id="name"
+					/>
+				</div>
+				<div fs-cmsfilter-element="filters" class="content-filters">
+					<label
+						data-w-id="6f9af2f6-e4bc-fe32-6e48-1231293ef14e"
+						class="w-checkbox filter-checkbox"
+						><input
+							type="checkbox"
+							id="checkbox"
+							name="checkbox"
+							data-name="Checkbox"
+							class="w-checkbox-input checkbox"
+						/><span
+							fs-cmsfilter-field="category"
+							class="checkbox-label w-form-label"
+							for="checkbox">Theory</span
+						></label
+					><label
+						data-w-id="c3f2038a-b0b0-2c9b-f024-0f4d261fb0bf"
+						class="w-checkbox filter-checkbox"
+						><input
+							type="checkbox"
+							id="checkbox-3"
+							name="checkbox-3"
+							data-name="Checkbox 3"
+							class="w-checkbox-input checkbox-2"
+						/><span
+							fs-cmsfilter-field="category"
+							class="checkbox-label w-form-label"
+							for="checkbox-3">Former socialism</span
+						></label
+					><label class="w-checkbox filter-checkbox"
+						><input
+							type="checkbox"
+							id="checkbox-2"
+							name="checkbox-2"
+							data-name="Checkbox 2"
+							class="w-checkbox-input checkbox-3"
+						/><span
+							fs-cmsfilter-field="category"
+							class="checkbox-label w-form-label"
+							for="checkbox-2">History</span
+						></label
+					><label class="w-checkbox filter-checkbox"
+						><input
+							type="checkbox"
+							id="checkbox-2"
+							name="checkbox-2"
+							data-name="Checkbox 2"
+							class="w-checkbox-input checkbox-4"
+						/><span
+							fs-cmsfilter-field="category"
+							class="checkbox-label w-form-label"
+							for="checkbox-2">Society &amp; culture</span
+						></label
+					><label class="w-checkbox filter-checkbox"
+						><input
+							type="checkbox"
+							id="checkbox-2"
+							name="checkbox-2"
+							data-name="Checkbox 2"
+							class="w-checkbox-input checkbox-5"
+						/><span
+							fs-cmsfilter-field="category"
+							class="checkbox-label w-form-label"
+							for="checkbox-2">Current events</span
+						></label
+					><label class="w-checkbox filter-checkbox"
+						><input
+							type="checkbox"
+							id="checkbox-2"
+							name="checkbox-2"
+							data-name="Checkbox 2"
+							class="w-checkbox-input checkbox-6"
+						/><span
+							fs-cmsfilter-field="category"
+							class="checkbox-label w-form-label"
+							for="checkbox-2">Philosophy</span
+						></label
+					><label class="w-checkbox filter-checkbox"
+						><input
+							type="checkbox"
+							id="checkbox-2"
+							name="checkbox-2"
+							data-name="Checkbox 2"
+							class="w-checkbox-input checkbox-7"
+						/><span
+							fs-cmsfilter-field="category"
+							class="checkbox-label w-form-label"
+							for="checkbox-2">Environmentalism</span
+						></label
+					><label class="w-checkbox filter-checkbox"
+						><input
+							type="checkbox"
+							id="checkbox-2"
+							name="checkbox-2"
+							data-name="Checkbox 2"
+							class="w-checkbox-input checkbox-8"
+						/><span
+							fs-cmsfilter-field="category"
+							class="checkbox-label w-form-label"
+							for="checkbox-2">Economics</span
+						></label
+					>
+				</div>
 			</form>
 			<div class="w-form-done">
 				<div>Thank you! Your submission has been received!</div>
@@ -24,11 +147,12 @@ import Layout from "../layouts/Layout.astro";
 				<div>Oops! Something went wrong while submitting the form.</div>
 			</div>
 		</div>
-	</div>
+	</main>
 	<div class="content-creators-section wf-section">
 		<div class="card-collection w-dyn-list">
 			<div role="list" class="card-collection-list w-dyn-items">
-				<div role="listitem" class="card-collection-item w-dyn-item"></div>
+				<div role="listitem" class="card-collection-item w-dyn-item">
+				</div>
 			</div>
 			<div class="empty-state w-dyn-empty">
 				<div>No items found.</div>
@@ -38,5 +162,25 @@ import Layout from "../layouts/Layout.astro";
 </Layout>
 
 <style>
-
+	.content-heading-text {
+		color: #fff;
+		text-align: center;
+		margin-top: 0;
+		margin-bottom: 0;
+		font-family: proxima-nova, sans-serif;
+		font-size: 3em;
+	}
+	.content-heading-disclaimer {
+		width: 80ch;
+		color: #b4b4b4;
+		text-align: center;
+		margin: 2em auto 2em auto;
+		font-size: 1.2em;
+		line-height: 1.6;
+	}
+	.content-heading-icon {
+		width: 50px;
+		margin: 0 auto 1em auto;
+		padding-top: 8em;
+	}
 </style>
