--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,6 +45,12 @@ const { title } = Astro.props;
 		padding: 0;
 		color: #333;
 	}
+	main {
+		margin-left: auto;
+		margin-right: auto;
+		padding: 0;
+		width: 100vw;
+	}
 	img {
 		max-width: 100%;
 		vertical-align: middle;
@@ -52,6 +58,7 @@ const { title } = Astro.props;
 	}
 	.body-gradient {
 		background-image: linear-gradient(#2f001c, #121212);
+		min-height: 100vh;
 	}
 	.nav-link {
 		text-decoration: none;
