Use typescript's "import type" where necessary

--- a/src/components/LiterateWork/ContributorsDisplay.astro
+++ b/src/components/LiterateWork/ContributorsDisplay.astro
@@ -1,5 +1,5 @@
 ---
-import { LiterateWork } from '@schema/types';
+import type { LiterateWork } from '@schema/types';
 import NonEmptyArray from '@components/predicates/NonEmptyArray.astro';
 import Cond from '@components/predicates/StrictNonFalse.astro';
 import { isAuthor, contributionType, sortContributions } from '@data/contribution';
