--- a/src/components/LiterateWork/index.astro
+++ b/src/components/LiterateWork/index.astro
@@ -1,5 +1,5 @@
 ---
-import { LiterateWork } from '@schema/types';
+import type { LiterateWork } from '@schema/types';
 import CoverDisplay from '@components/LiterateWork/CoverDisplay.astro';
 import TitleDisplay from '@components/LiterateWork/TitleDisplay.astro';
 import ContributorsDisplay from '@components/LiterateWork/ContributorsDisplay.astro';
