--- a/src/pages/lit/[id].astro
+++ b/src/pages/lit/[id].astro
@@ -1,6 +1,6 @@
 ---
 import * as edgedb from 'edgedb';
-import { LiterateWork as ILiterateWork } from '@schema/types';
+import type { LiterateWork as ILiterateWork } from '@schema/types';
 import Debug from '@components/Debug.astro';
 import LiterateWork from '@components/LiterateWork/index.astro';
 
