--- a/src/pages/lit/edition/[id].astro
+++ b/src/pages/lit/edition/[id].astro
@@ -1,6 +1,6 @@
 ---
 import * as edgedb from 'edgedb';
-import { Edition as IEdition } from '@schema/types';
+import type { Edition as IEdition } from '@schema/types';
 import Debug from '@components/Debug.astro';
 
 export { editionPaths as getStaticPaths } from '@data/static';
