--- a/src/pages/podcast/[id].astro
+++ b/src/pages/podcast/[id].astro
@@ -1,6 +1,6 @@
 ---
 import * as edgedb from 'edgedb';
-import { PodcastWork as IPodcastWork } from '@schema/types';
+import type { PodcastWork as IPodcastWork } from '@schema/types';
 import Debug from '@components/Debug.astro';
 
 export { podcastPaths as getStaticPaths } from '@data/static';
