--- a/src/pages/podcast/episode/[id].astro
+++ b/src/pages/podcast/episode/[id].astro
@@ -1,6 +1,6 @@
 ---
 import * as edgedb from 'edgedb';
-import { PodcastEpisodeWork as IPodcastEpisodeWork } from '@schema/types';
+import type { PodcastEpisodeWork as IPodcastEpisodeWork } from '@schema/types';
 import Debug from '@components/Debug.astro';
 
 export { podcastEpisodePaths as getStaticPaths } from '@data/static';
