--- a/src/components/LiterateWork/TitleDisplay.astro
+++ b/src/components/LiterateWork/TitleDisplay.astro
@@ -1,5 +1,5 @@
 ---
-import { LiterateWork } from '@schema/types';
+import type { LiterateWork } from '@schema/types';
 
 export interface Props {
   work: LiterateWork;
