--- a/src/pages/tag/[id].astro
+++ b/src/pages/tag/[id].astro
@@ -27,5 +27,9 @@ const { tag, data } = await client.querySingle<{
 `, { id });
 ---
 
+<div>
+  <h1>{tag.name}</h1>
+</div>
+
 <Debug value={{ tag, data }} />
 
